# dermaval

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  chrome_200_percent.pak  docker-compose.yml  i.json  manage.py  pyproject.toml  requirements.txt  uca-url.eps
core/: admin.py  managers.py  models.py  utils.py
core/migrations/: 0001_initial.py
derma/: admin.py  apps.py  models.py  task.py  utils.py  views.py
derma/management/commands/: import_roboflow.py  ingest_from_roboflow.py
derma/migrations/: 0001_initial.py  0002_userattempt_user.py  0003_auto_20260108_2116.py
dermapj/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
