[project]
name = "dermapj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bikram>=2.1.3",
    "celery[redis]>=5.2.7",
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.0.0",
    "coreapi==2.3.3",
    "crispy-bootstrap3>=2024.1",
    "django~=3.2",
    "django-celery-beat>=2.8.1",
    "django-ckeditor>=6.7.2",
    "django-colorfield>=0.14.0",
    "django-cors-headers>=4.5.0",
    "django-crispy-forms>=2.0",
    "django-currentuser>=0.7.0",
    "django-db-logger>=0.1.13",
    "django-docs>=0.3.3",
    "django-extensions>=3.2.3",
    "django-filter>=23.5",
    "django-import-export>=4.1.1",
    "django-log-viewer>=1.1.8",
    "django-map-widgets~=0.3.3",
    "django-markdownify>=0.9.5",
    "django-modeltranslation>=0.18.11",
    "django-mptt>=0.17.0",
    "django-mptt-admin>=2.8.0",
    "django-multiselectfield>=0.1.13",
    "django-nepali-datetime-field>=0.8.0",
    "django-oauth-toolkit==1.2.0",
    "django-pgviews-redux>=0.11.0",
    "django-prometheus>=2.3.1",
    "django-redis>=5.4.0",
    "django-rest-resetpassword>=0.1.2",
    "django-rest-swagger>=2.2.0",
    "django-role-permissions==2.2.1",
    "django-secured-fields>=0.4.4",
    "django-silk>=5.2.0",
    "django-tables2==2.7.0",
    "django-taggit>=4.0.0",
    "django-templated-mail>=1.1.1",
    "django-versatileimagefield>=3.1",
    "django-widget-tweaks==1.4.3",
    "djangorestframework>=3.14.0",
    "djangorestframework-api-key>=3.1.0",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-gis>=1.1",
    "djangorestframework-simplejwt>=5.3.1",
    "docutils>=0.21.2",
    "drf-nested-forms>=1.1.8",
    "drf-spectacular>=0.28.0",
    "drf-writable-nested>=0.7.2",
    "facebook-scraper>=0.2.59",
    "facebook-sdk==3.1.0",
    "fcm-django>=2.2.1",
    "ffmpeg-python>=0.2.0",
    "future>=1.0.0",
    "gdal==3.4.1",
    "geoip2>=5.1.0",
    "google-api-python-client==1.7.9",
    "google-cloud-speech>=2.32.0",
    "google-genai>=1.13.0",
    "gunicorn>=23.0.0",
    "importlib-metadata>=8.7.0",
    "nepali-datetime>=1.0.8.3",
    "netcdf4==1.5.8",
    "num2words>=0.5.14",
    "numpy<2.0.0",
    "openai>=1.77.0",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pandas>=1.3.5",
    "pillow==9.5.0",
    "psycopg2==2.8.5",
    "psycopg2-binary>=2.9.11",
    "pulp>=3.1.1",
    "pybsdate>=0.3.2",
    "pycryptodome>=3.23.0",
    "pylibmc>=1.6.3",
    "python-dateutil==2.8.0",
    "python-decouple>=3.8",
    "python-docx>=1.1.2",
    "python-memcached>=1.62",
    "pyxirr>=0.10.6",
    "qrcode>=8.2",
    "rapidfuzz>=3.13.0",
    "rasterio>=1.4.3",
    "redis>=6.0.0",
    "roboflow>=1.2.11",
    "scrapy~=2.12.0",
    "setuptools<80",
    "thefuzz>=0.22.1",
    "uvicorn>=0.34.2",
    "weasyprint==51",
    "xlrd==1.2.0",
    "xlsxwriter>=3.2.3",
    "xlwt>=1.3.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "coverage>=7.8.0",
    "django-debug-toolbar>=4.3.0",
    "django-test-without-migrations>=0.6",
    "flower>=2.0.1",
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "mixer>=7.2.2",
    "pylint>=3.3.7",
    "pylint-celery>=0.3",
    "pylint-django>=2.6.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-apidoc>=0.5.0",
    "sphinxcontrib-django>=2.5",
]
